--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.12",
+    "antd-mobile": "^2.3.1",
+    "lib-flexible": "^0.3.2",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
