--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.12",
     "antd-mobile": "^2.3.1",
+    "classnames": "^2.2.6",
     "lib-flexible": "^0.3.2",
     "lint-staged": "^10.0.7",
+    "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-sticky": "^6.0.3",
     "umi": "^3.0.12",
     "yorkie": "^2.0.0"
   }
