--- a/package.json
+++ b/package.json
@@ -32,5 +32,15 @@
     "react-sticky": "^6.0.3",
     "umi": "^3.0.12",
     "yorkie": "^2.0.0"
+  },
+  "theme": {
+    "brand-primary": "red"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
+    "css-loader": "^3.4.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.1.3"
   }
 }
