--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint-staged": "^10.0.7",
     "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
+    "rc-form": "^2.4.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-sticky": "^6.0.3",
