--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "lib-flexible": "^0.3.2",
     "lint-staged": "^10.0.7",
     "mockjs": "^1.1.0",
+    "postcss-flexbugs-fixes": "^4.2.0",
+    "postcss-px-to-viewport": "^1.1.1",
+    "postcss-write-svg": "^3.0.1",
     "prettier": "^1.19.1",
     "rc-form": "^2.4.11",
     "react": "^16.12.0",
