--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.5",
     "lint-staged": "^10.0.7",
+    "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
