--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@umijs/test": "^3.2.5",
     "lint-staged": "^10.0.7",
     "mockjs": "^1.1.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^1.19.1",
+    "rc-form": "^2.4.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "umi": "^3.2.5",
