--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^5.0.12",
+    "@types/classnames": "^2.2.10",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.5",
     "lint-staged": "^10.0.7",
