--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     ]
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^5.0.12",
     "@types/classnames": "^2.2.10",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.5",
@@ -32,6 +31,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "umi": "^3.2.5",
+    "umi-request": "^1.3.5",
     "yorkie": "^2.0.0"
   }
 }
